--- a/unicoding/cadastro.html
+++ b/unicoding/cadastro.html
@@ -43,7 +43,7 @@
                 <form action="#">
                     <div class="form-header">
                         <div class="title">
-                                <h1>Cadastre-se</h1>
+                            <h1>Cadastre-se</h1>
                         </div>
                         <div class="login-button">
                             <button><a href="#!">Entrar</a></button>
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                     <div class="continue-button">
-                        <button><a href="#">Continuar</a></button>
+                        <button><a href="unicoding.html">Continuar</a></button>
                     </div>
                 </form>
             </div>
