--- a/unicoding/login.html
+++ b/unicoding/login.html
@@ -57,7 +57,7 @@
                         </div>
                     </div>
                     <div class="continue-button">
-                        <button><a href="#">Continuar</a></button>
+                        <button><a href="unicoding.html">Continuar</a></button>
                     </div>
                 </form>
             </div>
