--- a/unicoding/planoEstudo.html
+++ b/unicoding/planoEstudo.html
@@ -1,7 +1,10 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="css/stylePlano.css"></link>
+    <link rel="icon" type="image/png" href="assets/img/unicodinglogo.png" />
+
 </head>
 
 
