--- a/unicoding/planoEstudo.html
+++ b/unicoding/planoEstudo.html
@@ -1,6 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="pt-br">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>UniCoding - Um plano de estudos completo</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/stylePlano.css"></link>
     <link rel="icon" type="image/png" href="assets/img/unicodinglogo.png" />
@@ -9,6 +12,27 @@
 
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+            <div class="container">
+                <a class="navbar-brand" href="index.html"><img src="assets/img/unicodinglogo.png" alt="..." /></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    Menu
+                    <i class="fas fa-bars ms-1"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="index.html">Página Inicial</a></li>
+                        <li class="nav-item"><a class="nav-link" href="unicoding.html">Plano de Estudos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <header class="tituloHeader">
+            <div class="container">
+
+            </div>
+        </header>
 
     <div id="addTodoListDiv">
         <input id="addTodoListInput" class="comment">
