--- a/unicoding/cadastro.html
+++ b/unicoding/cadastro.html
@@ -31,10 +31,12 @@
         </nav>
         <header class="tituloHeader">
             <div class="container">
+                <div class="tituloHeader-heading text-uppercase">cadastre-se</div>
+
 
             </div>
         </header>
-        
+        <!-- container 
         <div class="cadastro">
             <div class="form-image">
                 
@@ -81,6 +83,80 @@
                     </div>
                 </form>
             </div>
-        </div>
+            -->
+            <section class="page-section" id="contato">
+                <div class="container">
+                    <div class="text-center">
+                        <h2 class="section-heading text-uppercase">Cadastro</h2>
+                        <h3 class="section-subheading text-muted">Cadastre-se para utilizar o Plano de Estudos.</h3>
+                    </div>
+                    <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+                        <div class="row align-items-stretch mb-5">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <!-- nome-->
+                                    <input class="form-control" id="name" type="text" placeholder="Seu Nome" data-sb-validations="required" />
+                                    <div class="invalid-feedback" data-sb-feedback="name:required">É necessário digitar um nome.</div>
+                                </div>
+                                <div class="form-group">
+                                    <!-- Email -->
+                                    <input class="form-control" id="email" type="email" placeholder="Seu Email" data-sb-validations="required,email" />
+                                    <div class="invalid-feedback" data-sb-feedback="email:required">É necessário digitar um email.</div>
+                                    <div class="invalid-feedback" data-sb-feedback="email:email">Email inválido.</div>
+                                </div>
+                                <div class="form-group mb-md-0">
+                                    <!-- numero de telefone-->
+                                    <input class="form-control" id="phone" type="tel" placeholder="Seu telefone" data-sb-validations="required" />
+                                    <div class="invalid-feedback" data-sb-feedback="phone:required">É necessário digitar um número de telefone.</div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <!-- datanasc -->
+                                    <input class="form-control" id="date" type="date" placeholder="Data de Nascimento" data-sb-validations="required"></textarea>
+                                    <div class="invalid-feedback" data-sb-feedback="message:required">É necessário digitar uma data.</div>
+                                </div>
+                                <div class="form-group">
+                                    <!-- senha -->
+                                    <input class="form-control" id="password" type="password" placeholder="Digite uma senha" data-sb-validations="required"></textarea>
+                                    <div class="invalid-feedback" data-sb-feedback="message:required">É necessário digitar uma senha.</div>
+                                </div>
+                                <div class="form-group">
+                                    <!-- mensagem -->
+                                    <input class="form-control" id="password" type="password" placeholder="Repita Sua Senha" data-sb-validations="required"></textarea>
+                                    <div class="invalid-feedback" data-sb-feedback="message:required">É necessário repetir a senha.</div>
+                                </div>
+                            </div>
+                        </div>
+                            <div class="d-none" id="submitSuccessMessage">
+                                <div class="text-center text-white mb-3">
+                                    <div class="fw-bolder">Cadastrado com Sucesso!</div>
+                                    <br />
+                                </div>
+                            </div>
+                            <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Erro ao enviar Mensagem!</div></div>
+                            <div class="text-center"><button class="btn btn-primary btn-xl text-uppercase disabled" id="submitButton" type="submit">Cadastrar</button></div>
+                        </form>
+                    </div>
+                 </div>
+            </section>
+
+        <footer class="footer py-4">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; Unicoding 2023</div>
+                    <div class="col-lg-4 my-3 my-lg-0">
+                        <a class="btn btn-dark btn-social mx-2" href="https://github.com/MarceloAbbi/ProjetoLab" aria-label="Github"><i class="fab fa-github"></i></a>
+                    </div>
+                    <div class="col-lg-4 text-lg-end">
+                        <a class="link-dark text-decoration-none me-3" href="https://docs.google.com/document/d/1HlA-abZNYMGD6pnotrUW0do9E_0-RGzAFRW3aqDq6dM/edit?usp=sharing">Cronograma de Atividades</a>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="js/scripts.js"></script>
+        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     </body>
 </html>
