--- a/unicoding/login.html
+++ b/unicoding/login.html
@@ -24,43 +24,69 @@
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="index.html">Página Inicial</a></li>
                         <li class="nav-item"><a class="nav-link" href="cadastro.html">Cadastre-se</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="#">Login</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="login.html">Login</a></li>
                     </ul>
                 </div>
             </div>
-        </nav>
+        </nav>  
         <header class="tituloHeader">
             <div class="container">
+                <div class="tituloHeader-heading text-uppercase"></div>
             </div>
         </header>
-        
-        <div class="cadastro">
-            <div class="form-image">
+            <section class="page-section" id="contato">
+                <div class="container">
+                    <div class="text-center">
+                        <h2 class="section-heading text-uppercase">Login</h2>
+                        <h3 class="section-subheading text-muted">Entre com seu Email e senha para Utilizar o Plano de Estudos</h3>
+                    </div>
+                    <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+                        <div class="row align-items-stretch mb-5">
+                            <div class="col-md-6">
+
+                                <div class="form-group">
+                                    <!-- Email -->
+                                    <input class="form-control" id="email" type="email" placeholder="Seu Email" data-sb-validations="required,email" />
+                                    <div class="invalid-feedback" data-sb-feedback="email:required">É necessário digitar um email.</div>
+                                    <div class="invalid-feedback" data-sb-feedback="email:email">Email inválido.</div>
+                                </div>
+
+                                <div class="form-group">
+                                    <!-- senha -->
+                                    <input class="form-control" id="password" type="password" placeholder="Digite uma senha" data-sb-validations="required"></textarea>
+                                    <div class="invalid-feedback" data-sb-feedback="message:required">É necessário digitar uma senha.</div>
+                                </div>
+                            </div>
+                        </div>
+                            <div class="d-none" id="submitSuccessMessage">
+                                <div class="text-center text-white mb-3">
+                                    <div class="fw-bolder">Cadastrado com Sucesso!</div>
+                                    <br />
+                                </div>
+                            </div>
+                            <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Erro ao enviar Mensagem!</div></div>
+                            <div class="text-center"><button class="btn btn-primary btn-xl text-uppercase disabled" id="submitButton" type="submit">Cadastrar</button></div>
+                        </form>
+                    </div>
+                 </div>
+            </section>
+
+        <footer class="footer py-4">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; Unicoding 2023</div>
+                    <div class="col-lg-4 my-3 my-lg-0">
+                        <a class="btn btn-dark btn-social mx-2" href="https://github.com/MarceloAbbi/ProjetoLab" aria-label="Github"><i class="fab fa-github"></i></a>
+                    </div>
+                    <div class="col-lg-4 text-lg-end">
+                        <a class="link-dark text-decoration-none me-3" href="https://docs.google.com/document/d/1HlA-abZNYMGD6pnotrUW0do9E_0-RGzAFRW3aqDq6dM/edit?usp=sharing">Cronograma de Atividades</a>
+                    </div>
+                </div>
             </div>
-            <div class="formulario">
-                <form action="#">
-                    <div class="form-header">
-                        <div class="title">
-                                <h1>Login</h1>
-                        </div>
-                        <div class="login-button">
-                            <button><a href="#!">Entrar</a></button>
-                        </div>
-                    </div>
-                        <div class="input-box">
-                            <label for="email">Email</label>
-                            <input type="email" name="email" id="email" placeholder="Digite seu email*" required>
-                        </div>
-                        <div class="input-box">
-                            <label for="password">Senha</label>
-                            <input type="password" name="password" id="password" placeholder="Digite sua senha*" required>
-                        </div>
-                    </div>
-                    <div class="continue-button">
-                        <button><a href="unicoding.html">Continuar</a></button>
-                    </div>
-                </form>
-            </div>
-        </div>
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="js/scripts.js"></script>
+        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     </body>
 </html>
