--- a/unicoding/cadastro.html
+++ b/unicoding/cadastro.html
@@ -106,7 +106,7 @@
                                 </div>
                                 <div class="form-group mb-md-0">
                                     <!-- numero de telefone-->
-                                    <input class="form-control" id="phone" type="tel" placeholder="Seu telefone" data-sb-validations="required" />
+                                    <input class="form-control" id="phone" type="tel" placeholder="Seu Telefone" data-sb-validations="required" />
                                     <div class="invalid-feedback" data-sb-feedback="phone:required">É necessário digitar um número de telefone.</div>
                                 </div>
                             </div>
