--- a/unicoding/index.html
+++ b/unicoding/index.html
@@ -20,10 +20,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="#inicio">Inicio</a></li>
                         <li class="nav-item"><a class="nav-link" href="#sobre">Sobre</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
-                        <li class="nav-item"><a class="nav-link" href="unicoding.html">Plano de Estudos</a></li>
                         <li class="nav-item"><a class="nav-link" href="cadastro.html">Cadastre-se</a></li>
                         <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
                     </ul>
@@ -33,9 +32,9 @@
 
         <header class="tituloHeader">
             <div class="container">
-                <div class="tituloHeader-heading text-uppercase">UniCoding</div>
+                <div class="tituloHeader-heading text-uppercase">Unicoding</div>
                 <div class="tituloHeader-subheading">Um plano de estudos completo!</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="cadastro.html">Começar</a>
+                <a class="btn btn-primary btn-xl " href="cadastro.html">Começar</a>
             </div>
         </header>
         <section class="page-section" id="section-1">
@@ -51,7 +50,7 @@
                             <i class="fas fa-graduation-cap fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Foco</h4>
-                        <p class="text-muted">Administre o tempo que quer passar para cada tempo de estudo</p>
+                        <p class="text-muted">Administre o tempo que quer passar para cada assunto de estudo</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -78,7 +77,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Sobre</h2>
-                    <h3 class="section-subheading text-muted">Conheça um pouco mais sobre o Projeto UniCoding</h3>
+                    <h3 class="section-subheading text-muted">Conheça um pouco mais sobre o Projeto Unicoding</h3>
                     <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">O Unicoding é um projeto de trabalho de conclusão de curso, desenvolvido por um estudante de Análise e Desenvolvimento de Sistemas, e tem como objetivo principal fornecer uma ferramenta eficiente para a organização e gerenciamento das tarefas e estudos dos estudantes. Por meio da utilização de tecnologias de ponta, o site oferecerá uma interface intuitiva e fácil de usar, permitindo que os usuários naveguem com facilidade e acessem todos os recursos necessários com rapidez.</p></div>
                     <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Uma das principais vantagens do site é que ele oferecerá uma abordagem focada na administração do tempo de estudo, contribuindo para um aprendizado mais eficiente e motivador. Com a divisão adequada do tempo livre e de estudo, os estudantes poderão estabelecer metas, priorizar tarefas e gerenciar seu tempo de forma mais eficiente, o que pode aumentar suas chances de sucesso acadêmico e profissional.</p></div>
                     <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Além disso, o site é voltado para estudantes de tecnologia, mas pode ser utilizado por qualquer pessoa que deseje se organizar e gerenciar suas tarefas e estudos de forma mais eficiente, atendendo a uma ampla gama de usuários, independentemente de sua área de interesse ou nível de habilidade, o site pode ser uma excelente ferramenta para ajudar os estudantes a alcançar seus objetivos de forma mais eficiente e organizada.</p></div>
@@ -92,7 +91,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Desenvolvedor do projeto</h2>
-                    <h3 class="section-subheading text-muted">Conheça as redes do desenvolvedor do projeto UniCoding</h3>
+                    <h3 class="section-subheading text-muted">Conheça as redes do desenvolvedor do projeto Unicoding</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-15">
@@ -118,7 +117,7 @@
                     <h2 class="section-heading text-uppercase">Contato</h2>
                     <h3 class="section-subheading text-muted">Envie uma mensagem para o desenvolvedor.</h3>
                 </div>
-                <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+                <form id="contactForm" data-sb-form-api-token="9784f27e-6346-40e5-89b8-52515eedb627">
                     <div class="row align-items-stretch mb-5">
                         <div class="col-md-6">
                             <div class="form-group">
@@ -154,6 +153,15 @@
                     </div>
                     <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Erro ao enviar Mensagem!</div></div>
                     <div class="text-center"><button class="btn btn-primary btn-xl text-uppercase disabled" id="submitButton" type="submit">Enviar Mensagem</button></div>
+
+                                                <!-- Link de enviar mensagem <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>-->
+   <!-- https://startbootstrap.com/solution/contact-forms -->
+   
+           <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+        <!-- * *                               SB Forms JS                               * *-->
+        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
+        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+		
                 </form>
             </div>
         </section>
