--- a/unicoding/login.html
+++ b/unicoding/login.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <title>Login - UniCoding</title>
+        <title>Login - Unicoding</title>
         <link rel="icon" type="image/png" href="assets/img/unicodinglogo.png" />
         <link rel="stylesheet" href="css/styles.css">
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -65,7 +65,7 @@
                                 </div>
                             </div>
                             <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Erro ao enviar Mensagem!</div></div>
-                            <div class="text-center"><button class="btn btn-primary btn-xl text-uppercase disabled" id="submitButton" type="submit">Cadastrar</button></div>
+                            <div class="text-center"><button class="btn btn-primary btn-xl text-uppercase disabled" id="submitButton" type="submit">Entrar</button></div>
                         </form>
                     </div>
                  </div>
