--- a/unicoding/cadastro.html
+++ b/unicoding/cadastro.html
@@ -36,7 +36,7 @@
 
             </div>
         </header>
-            <section class="page-section" id="contato">
+            <section class="page-section" id="contact">
                 <div class="container">
                     <div class="text-center">
                         <h2 class="section-heading text-uppercase">Cadastro</h2>
@@ -86,7 +86,9 @@
                                     <br />
                                 </div>
                             </div>
-                            <a class="btn btn-primary btn-xl" href="planoEstudo.html">Cadastrar</a>
+                            <div class="text-center">
+                                <a class="btn btn-primary btn-xl" href="planoEstudo.html">Cadastrar</a>
+                            </div>
                         </form>
                     </div>
                  </div>
@@ -109,7 +111,11 @@
         <script src="js/scripts.js"></script>
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+
+        
         <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
+        <script src="js/database.js"></script>
 
         
     </body>
