--- a/unicoding/index.html
+++ b/unicoding/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <title>UniCoding - Um plano de estudos completo</title>
+        <title>Unicoding - Um plano de estudos completo</title>
         <link rel="icon" type="image/png" href="assets/img/unicodinglogo.png" />
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
@@ -21,8 +21,8 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link active" href="#inicio">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#sobre">Sobre</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#section-2">Sobre</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact">Contato</a></li>
                         <li class="nav-item"><a class="nav-link" href="cadastro.html">Cadastre-se</a></li>
                         <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
                     </ul>
@@ -111,7 +111,7 @@
             </div>
         </section>
         <!-- contato-->
-        <section class="page-section" id="contato">
+        <section class="page-section" id="contact">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Contato</h2>
@@ -147,21 +147,11 @@
                     </div>
                     <div class="d-none" id="submitSuccessMessage">
                         <div class="text-center text-white mb-3">
-                            <div class="fw-bolder">Mensagem Enviada!</div>
-                            <br />
+                            <div class="fw-bolder">Mensagem Enviada com Sucesso!</div>
                         </div>
                     </div>
                     <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Erro ao enviar Mensagem!</div></div>
                     <div class="text-center"><button class="btn btn-primary btn-xl text-uppercase disabled" id="submitButton" type="submit">Enviar Mensagem</button></div>
-
-                                                <!-- Link de enviar mensagem <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>-->
-   <!-- https://startbootstrap.com/solution/contact-forms -->
-   
-           <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <!-- * *                               SB Forms JS                               * *-->
-        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-		
                 </form>
             </div>
         </section>
