--- a/unicoding/planoEstudo.html
+++ b/unicoding/planoEstudo.html
@@ -3,16 +3,15 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unicoding - Um plano de estudos completo</title>
-    <meta charset="UTF-8">
-    <link href="css/styles.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/stylePlano.css"></link>
+    <title>Plano de Estudo - unicoding</title>
     <link rel="icon" type="image/png" href="assets/img/unicodinglogo.png" />
+
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/stylePlano.css"></link>
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
     
-
 
 </head>
 
@@ -21,7 +20,8 @@
     <section class="page-section" id="plano">
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
                 <div class="container">
-                    <a class="navbar-brand" href="index.html"><img src="assets/img/unicodinglogo.png" alt="..." /></a>
+
+
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                         Menu
                         <i class="fas fa-bars ms-1"></i>
@@ -29,8 +29,7 @@
                     <div class="collapse navbar-collapse" id="navbarResponsive">
                         <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                             <li class="nav-item"><a class="nav-link" href="index.html">Página Inicial</a></li>
-                            <li class="nav-item"><a class="nav-link" href="unicoding.html">Plano de Estudos</a></li>
-                            <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+                            <li class="nav-item"><a class="nav-link" href="pomodoro.html">Pomodoro</a></li>
                         </ul>
                     </div>
                 </div>
@@ -49,20 +48,23 @@
     </section>
 
    
-    <!-- Footer-->
-    <footer class="footer py-4">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-4 text-lg-start">Copyright &copy; Unicoding 2023</div>
-                <div class="col-lg-4 my-3 my-lg-0">
-                    <a class="btn btn-dark btn-social mx-2" href="https://github.com/MarceloAbbi/ProjetoLab" aria-label="Github"><i class="fab fa-github"></i></a>
-                </div>
-                <div class="col-lg-4 text-lg-end">
-                    <a class="link-dark text-decoration-none me-3" href="https://docs.google.com/document/d/1HlA-abZNYMGD6pnotrUW0do9E_0-RGzAFRW3aqDq6dM/edit?usp=sharing">Cronograma de Atividades</a>
+    <!-- 
+    <section>
+        <footer class="footer py-4">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; Unicoding 2023</div>
+                    <div class="col-lg-4 my-3 my-lg-0">
+                        <a class="btn btn-dark btn-social mx-2" href="https://github.com/MarceloAbbi/ProjetoLab" aria-label="Github"><i class="fab fa-github"></i></a>
+                    </div>
+                    <div class="col-lg-4 text-lg-end">
+                        <a class="link-dark text-decoration-none me-3" href="https://docs.google.com/document/d/1HlA-abZNYMGD6pnotrUW0do9E_0-RGzAFRW3aqDq6dM/edit?usp=sharing">Cronograma de Atividades</a>
+                    </div>
                 </div>
             </div>
-        </div>
-    </footer>
+        </footer>
+    </section>Footer-->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/scripts.js"></script>
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
